fixed the videoplayer bug on mobile

--- a/IEinEthiopia/css/agency.css
+++ b/IEinEthiopia/css/agency.css
@@ -64,14 +64,31 @@ h6 {
     margin: 0 auto;
 }
 
-.videoframe {
+/** fixing the videoframe bug **/
+
+@media(min-width:551px) {
+    .videoframe {
     width:100%;
     height:500px;
 }
-.videoframecontrols {
+    .videoframecontrols {
     width:15%;
     height:500px;
 }
+}
+
+@media(max-width:550px) {
+    .videoframe {
+    width:100%;
+    height:300px;
+}
+    .videoframecontrols {
+    width:15%;
+    height:300px;
+}
+}
+
+
 
 /*added a max width for container*/
 .container{
